@@ -1,3 +1,19 @@
+Author: Mehmood Yar Baig
+
+Color chooser app with bi-directional ability to choose color. 
+
+**Download the JavaFX SDK:**
+https://gluonhq.com/products/javafx/
+
+**Add JavaFX library:**
+File -> Project Structure -> Libraries -> add library
+path->C:\javafx-sdk-11.0.2\lib 
+
+**Add VM Options:**
+Run-> Edit Configuration -> modify options -> add vm options
+--module-path %PATH_TO_JAVAFX_SDK/LIB% --add-modules javafx.controls,javafx.fxml
+
+
 ![image](https://user-images.githubusercontent.com/48985550/119395491-65735a00-bcf5-11eb-9126-41b6d26fb41b.png)
 
 ![image](https://user-images.githubusercontent.com/48985550/119395530-76bc6680-bcf5-11eb-96f3-5f2986a31797.png)
